--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>LIBRARY</title>
 </head>
 <body>
     
+    <div class="container" id="libary-cards">
+
+    <script src="./script.js" defer></script>
 </body>
 </html>
