--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="container" id="libary-cards">
+    <div class="container" id="library-cards"></div>
 
         <script src="./script.js" defer></script>
 </body>
