--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
 
     <div class="container" id="library-cards"></div>
 
+    <form class="hidden" id="book-form">
+        <label for="title">Title: </label>
+        <input type="text" id="title" name="title" required>
+
+        <label for="author">Author: </label>
+        <input type="text" id="author" name="author" required>
+
+        <label for="pages">Pages: </label>
+        <input type="text" id="pages" name="pages" required>
+
+        <label for="read">Read: </label>
+        <input type="checkbox" id="read" name="read" required>
+
+        <button type="submit">Add Book</button>
+        <button type="button" id="cancel">Cancel</button>
+    </form>
+
+        <button id="new-book">New Book</button>
+
         <script src="./script.js" defer></script>
 </body>
 
