Make form add new book

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="pages">Pages: </label>
         <input type="text" id="pages" name="pages" required>
 
-        <label for="read">Read: </label>
+        <label for="read">Read Status: </label>
         <input type="checkbox" id="read" name="read" required>
 
         <button type="submit">Add Book</button>
